# xai-fake-news-detect

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART_DATASET_PIPELINE.md  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: datasets.yaml  default.yaml
configs/grids/: ablations.yaml
data/samples/: smoke.csv
docs/: ASSUMPTIONS.md  DATASETS.md  DATASET_PIPELINE.md  EXPERIMENTS.md  RESULTS_MAP.md
examples/: dataset_pipeline_demo.py
lexicons/: neg_words.txt  pos_words.txt  profanity.txt
paper/: paper_draft.tex
scripts/: build_zip.py  evaluate.py  prepare_data.py  run_experiments.py
src/mmx_news/: __init__.py  cli.py  cli_dataset.py
src/mmx_news/data/: __init__.py  dataset_pipeline.py  download.py  loaders.py  preprocess.py
src/mmx_news/evaluation/: metrics.py  stats.py  validate.py
src/mmx_news/experiments/: ablations.py  baselines.py  reproduce_figures.py
src/mmx_news/features/: mechanisms.py
src/mmx_news/models/: classifiers.py  transition.py
src/mmx_news/training/: pipeline.py  schedulers.py  train.py  utils.py
src/mmx_news/utils/: config.py  constants.py  io.py  logging.py  seeds.py
tests/: conftest.py  test_data.py  test_dataset_pipeline.py  test_features.py  test_mechanisms.py  test_metrics.py  test_training.py
