[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmx-news"
version = "0.1.0"
description = "Reproduction of Explainable Fake News Detection via Mental-Model Approximation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name="Reproduction Engineer", email="noreply@example.com"}
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.26.4",
    "pandas==2.1.4",
    "scikit-learn==1.4.2",
    "scipy==1.11.4",
    "matplotlib==3.8.2",
    "pyyaml==6.0.1",
    "tqdm==4.66.2",
    "umap-learn==0.5.5",
    "joblib==1.3.2",
    "pydantic",
    "kaggle",
    "spacy==3.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pytest",
    "pre-commit",
]
st = [
    "sentence-transformers==2.5.1",
    "torch==2.2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F841"]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mmx_news*"]
